--- a/docker-compose-dc1.yml
+++ b/docker-compose-dc1.yml
@@ -19,7 +19,11 @@ services:
       ADMIN_PASS: Passw0rd
       DNS_FORWARDER: 8.8.8.8
     volumes:
-      - dc1-local-samba:/usr/local/samba
+      - dc1-etc:/usr/local/samba/etc
+      - dc1-private:/usr/local/samba/private
+      - dc1-var:/usr/local/samba/var
 
 volumes:
-  dc1-local-samba:
+  dc1-etc:
+  dc1-private:
+  dc1-var:
