--- a/docker-compose-dc1.yml
+++ b/docker-compose-dc1.yml
@@ -19,11 +19,11 @@ services:
       ADMIN_PASS: Passw0rd
       DNS_FORWARDER: 8.8.8.8
     volumes:
-      - dc1-etc:/usr/local/samba/etc
-      - dc1-private:/usr/local/samba/private
-      - dc1-var:/usr/local/samba/var
+      - dc1_etc:/usr/local/samba/etc
+      - dc1_private:/usr/local/samba/private
+      - dc1_var:/usr/local/samba/var
 
 volumes:
-  dc1-etc:
-  dc1-private:
-  dc1-var:
+  dc1_etc:
+  dc1_private:
+  dc1_var:
