--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,9 +31,9 @@ services:
       - "DC4 DC4.dgs.net:172.16.238.40"
     command: bash -c "samba-domain-provision && samba -F"
     volumes:
-      - dc1-etc:/usr/local/samba/etc
-      - dc1-private:/usr/local/samba/private
-      - dc1-var:/usr/local/samba/var
+      - dc1_etc:/usr/local/samba/etc
+      - dc1_private:/usr/local/samba/private
+      - dc1_var:/usr/local/samba/var
 
     networks:
       static-network:
@@ -69,9 +69,9 @@ services:
       - "DC4 DC4.dgs.net:172.16.238.40"
     command: bash -c "samba-domain-join DC1 && samba -F"
     volumes:
-      - dc2-etc:/usr/local/samba/etc
-      - dc2-private:/usr/local/samba/private
-      - dc2-var:/usr/local/samba/var
+      - dc2_etc:/usr/local/samba/etc
+      - dc2_private:/usr/local/samba/private
+      - dc2_var:/usr/local/samba/var
     networks:
       static-network:
         ipv4_address: 172.16.238.20
@@ -106,9 +106,9 @@ services:
       - "DC4 DC4.dgs.net:172.16.238.40"
     command: bash -c "samba-domain-join DC1 && samba -F"
     volumes:
-      - dc3-etc:/usr/local/samba/etc
-      - dc3-private:/usr/local/samba/private
-      - dc3-var:/usr/local/samba/var
+      - dc3_etc:/usr/local/samba/etc
+      - dc3_private:/usr/local/samba/private
+      - dc3_var:/usr/local/samba/var
     networks:
       static-network:
         ipv4_address: 172.16.238.30
@@ -143,26 +143,26 @@ services:
       - "DC4 DC4.dgs.net:172.16.238.40"
     command: bash -c "samba-domain-join DC1 && samba -F"
     volumes:
-      - dc4-etc:/usr/local/samba/etc
-      - dc4-private:/usr/local/samba/private
-      - dc4-var:/usr/local/samba/var
+      - dc4_etc:/usr/local/samba/etc
+      - dc4_private:/usr/local/samba/private
+      - dc4_var:/usr/local/samba/var
     networks:
       static-network:
         ipv4_address: 172.16.238.40
 
 volumes:
-  dc1-etc:
-  dc1-private:
-  dc1-var:
-  dc2-etc:
-  dc2-private:
-  dc2-var:
-  dc3-etc:
-  dc3-private:
-  dc3-var:
-  dc4-etc:
-  dc4-private:
-  dc4-var:
+  dc1_etc:
+  dc1_private:
+  dc1_var:
+  dc2_etc:
+  dc2_private:
+  dc2_var:
+  dc3_etc:
+  dc3_private:
+  dc3_var:
+  dc4_etc:
+  dc4_private:
+  dc4_var:
 
 
 networks:
