--- a/.github/workflows/debian-image.yml
+++ b/.github/workflows/debian-image.yml
@@ -4,13 +4,22 @@ on:
   push:
     branches: ["master"]
     paths-ignore:
-      - "README.md"
       - "dev/**"
+      - "docker-compose.yml"
+      - "docker-compose-dc1.yml"
+      - "LICENSE"
+      - "Makefile"
+      - "README.md"
+
   pull_request:
     branches: ["master"]
     paths-ignore:
-      - "README.md"
       - "dev/**"
+      - "docker-compose.yml"
+      - "docker-compose-dc1.yml"
+      - "LICENSE"
+      - "Makefile"
+      - "README.md"
 
 jobs:
   build:
