Add github to gh ignore actions

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,13 +5,14 @@ on:
     branches:
       - master
     paths-ignore:
+      - .github/**
       - dev/**
       - docker-compose.yml
       - dc1.yml
       - LICENSE
       - Makefile
       - README.md
-      - .github/workflows
+
   workflow_dispatch:
 
 jobs:
