--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,22 +1,10 @@
-name: build
+name: build-and-push
 
 on:
-  push:
-    branches:
-      - master
-    paths-ignore:
-      - .github/**
-      - dev/**
-      - docker-compose.yml
-      - dc1.yml
-      - LICENSE
-      - Makefile
-      - README.md
-
   workflow_dispatch:
 
 jobs:
-  build:
+  build-publish:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repo
@@ -28,5 +16,17 @@ jobs:
       - name: Set up docker buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Build docker images
-        run: docker compose build
+      - name: AMD build
+        run: docker compose build dc1
+
+      - name: ARM build
+        run: ./dev/arm64/build.sh
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ vars.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Tag and publish
+        run: ./dev/update-tags-and-push-to-dockerhub.sh
