--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,10 +1,10 @@
-name: build-and-push
+name: build
 
 on:
   workflow_dispatch:
 
 jobs:
-  build-publish:
+  build-and-publish:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repo
